w17 20.03.2018 15:10:32 +0300 - build 280

1. arc:u может создавать архив.

w17 20.03.2018 13:12:14 +0300 - build 279

1. Не вводим пароль в AnalyseW.

w17 16.03.2018 14:59:21 +0300 - build 278

1. 7z.dll обновлена до версии 18.03.

w17 15.03.2018 17:37:51 +0300 - build 277

1. Продолжение 276

w17 14.03.2018 18:19:22 +0300 - build 276

1. M#3582: Arclite некорректно ведет себя, если не может выставить распакованному файлу атрибуты

drkns 26.02.2018 08:02:39 +0000 - build 275

1. Far 5150.

w17 09.02.2018 19:47:26 +0300 - build 274

1. 7z.dll обновлена до версии 18.01.

drkns 03.02.2018 14:55:34 +0000 - build 273

1. Используем warning style для диалога перезаписи (FDLG_WARNING) для единообразия с Far.

w17 18.01.2018 02:25:38 +0300 - build 272

1. M#3576: Arclite produces invalid archive files list

w17 11.01.2018 16:20:49 +0300 - build 271

1. 7z.dll обновлена до версии 18.00.

w17 11.01.2018 16:01:26 +0300 - build 270

1. M#1627: Непонятное поведение с запароленными архивами

w17 10.01.2018 16:34:20 +0300 - build 269

1. Ignore Extraction kDataAfterEnd error.

w17 27.12.2017 12:25:47 +0300 - build 268

1. M#3449 - более корректный способ определения вложенного архива.

w17 25.12.2017 12:31:52 +0300 - build 267

1. arc:d [-ie[:(y|n)]] [-p:<password>] <archive> <item> ...

w17 21.12.2017 13:33:30 +0300 - build 266

1. Compression level shift -- fixed

w17 20.12.2017 19:44:14 +0300 - build 265

1. Plugin.Call -- формат аналогичен комстроке, все параметры текстовые, open исключён.

w17 14.12.2017 14:00:17 +0300 - build 264

1. 263 + маски файлов

w17 13.12.2017 13:47:36 +0300 - build 263

1. Добавлена команда для извлечения элементов архива
arc:e [-ie[:(y|n)]] [-o[:(o|s|r|a)]] [-mf[:(y|n)]] [-p:<password>] [-out:<path>] <archive> <item> ...
Элементы архива задаются полным именем, маски (?пока) не принимаются.

w17 11.12.2017 12:56:15 +0300 - build 262

1. Проверка расширения библиотек при загрузке (7z.dll_ теперь грузиться не будет)