@@ -1,3 +1,7 @@
+w17 20.03.2018 20:04:31 +0300 - build 281
+
+1. fixed: падение при выгрузке при использовании WinCryptHashers.
+
 w17 20.03.2018 15:10:32 +0300 - build 280
 
 1. arc:u может создавать архив.
